[package]
name = "eyelink-rs"
version = "0.1.0"
authors = ["Luke Hsiao <lwhsiao@stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c_fixed_string = "0.2.0"
libeyelink-sys = { version = "0.1.2", features = ["sdl-graphics"] }
thiserror = "1.0.20"

[dev-dependencies]
serial_test = "0.4.0"
