[package]
name = "eyelink-rs"
version = "0.1.0"
authors = ["Luke Hsiao <lwhsiao@stanford.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
c_fixed_string = "0.2.0"
lazy_static = "1.4.0"
libc = "0.2.77"
libeyelink-sys = "0.1.4" 
log = "0.4.11"
regex = "1.3.9"
sdl2 = "0.34.3"
thiserror = "1.0.20"

[dev-dependencies]
serial_test = "0.5.0"
