[package]
name = "fvideo"
version = "0.1.0"
authors = ["Luke Hsiao <lwhsiao@stanford.edu>"]
edition = "2018"
description = "A collection of binaries for foveated video encoding."
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fvideo"
path = "src/lib.rs"

[[bin]]
name = "recording"

[[bin]]
name = "fvideo"
path = "src/bin/fvideo.rs"

[dependencies]
anyhow = "1.0.32"
eyelink-rs = {path = "../eyelink-rs"}
ffmpeg-next = "4.3.6"
lazy_static = "1.4.0"
log = "0.4.11"
num-rational = "0.3.0"
pretty_env_logger = "0.4.0"
regex = "1.3.9"
sdl = "0.3.6"
# This must be statically linked so that libeyelink_sys's use of SDL doesn't conflict.
sdl2 = { version = "0.34.3", features = ["bundled", "static-link"] }
structopt = "0.3.18"
thiserror = "1.0.20"
x264 = {path = "../x264-rs"}
