[package]
name = "fvideo"
version = "0.1.0"
authors = ["Luke Hsiao <lwhsiao@stanford.edu>"]
edition = "2018"
description = "A collection of binaries for foveated video encoding."
publish = false
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fvideo"
path = "src/lib.rs"

[[bin]]
name = "recording"

[[bin]]
name = "realtime"

[[bin]]
name = "latency"

[[bin]]
name = "minlatency"

[dependencies]
anyhow = "1.0.38"
chrono = "0.4.19"
ctrlc = "3.1.7"
eyelink-rs = {path = "../eyelink-rs"}
ffmpeg-next = "4.3.8"
lazy_static = "1.4.0"
log = "0.4.13"
num-rational = "0.3.2"
pretty_env_logger = "0.4.0"
regex = "1.4.3"
# This must be statically linked so that libeyelink_sys's use of SDL doesn't conflict.
sdl2 = { version = "0.34.3", features = ["bundled", "static-link"] }
serialport = "4.0.0"
structopt = "0.3.21"
thiserror = "1.0.23"
x264 = {path = "../x264-rs"}
