[package]
name = "fvideo"
version = "0.1.0"
authors = ["Luke Hsiao <lwhsiao@stanford.edu>"]
edition = "2018"
description = "A collection of binaries for foveated video encoding."
publish = false
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fvideo"
path = "src/lib.rs"

[[bin]]
name = "recording"

[[bin]]
name = "realtime"

[[bin]]
name = "user_study"

[[bin]]
name = "latency"

[[bin]]
name = "minlatency"

[dependencies]
anyhow = "1.0.40"
chrono = "0.4.19"
ctrlc = "3.1.8"
eyelink-rs = {path = "../eyelink-rs"}
ffmpeg-next = "4.3.8"
flume = "0.10.2"
lazy_static = "1.4.0"
log = "0.4.14"
num-rational = "0.4.0"
pretty_env_logger = "0.4.0"
rand = "0.8.3"
regex = "1.4.5"
# This must be statically linked so that libeyelink_sys's use of SDL doesn't conflict.
sdl2 = { version = "0.34.3", features = ["bundled", "static-link"] }
serde = { version = "1.0.125", features = ["derive"] }
serialport = "4.0.0"
structopt = "0.3.21"
termion = "1.5.6"
thiserror = "1.0.24"
toml = "0.5.8"
x264 = {path = "../x264-rs"}
