[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Luke Hsiao <lwhsiao@stanford.edu>"]

[tool.poetry.dependencies]
python = "^3"
seaborn = "^0.11.1"
numpy = "^1.19.4"
pandas = "^1.2.0"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
